--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   get: ^4.6.1
   open_settings: ^2.0.2
   shared_preferences: ^2.0.11
-
+  permission_handler: ^8.3.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
